# fast

./: .hartree_fock.py.swp  .math_tools.py.swp  CMakeLists.txt  basis_info.txt  cc-pvdz.1.json  cc-pvdz.nw  cc_tools.py  function_test.py  gaussian_1d.cpp  geometry_read.cc  hartree_fock.py  hf_tools.py  main.cpp  math_tools.py  math_utils.py  simple_lib.cpp  simple_lib.hpp  szabo_1p2.cpp  szabo_1p2.py  water.nw  workflow.sh
extras/: cc_function_test.py  cc_tools.py  h2o.inp  hf_function_test.py  momenta.py  pbc_hartree_fock.py  study_basis.py  water.py
include/: atomic_info.h  atomic_map_lib.hpp  atomic_numbers.h  basis.h  coordinates.h  shell.h  sub_lib.hpp
slate_test/: CMakeLists.txt  compile.sh  slate_matrix_vector.cc
src/: CMakeLists.txt  atomic_info.cpp  atomic_map_lib.cpp  atomic_numbers.cpp  basis.cpp  basis_old.cpp  coordinates.cpp  coordinates_alt.cpp  main.cpp  prototype.cpp  shell.cpp  sub_lib.cpp
